--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.4.1",
     "core-js": "^3.6.4",
+    "d3-fetch": "^1.1.2",
     "geojson2h3": "^1.0.1",
     "h3-js": "^3.6.3",
     "mapbox-gl": "^1.7.0",
