--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.4.1",
     "core-js": "^3.6.4",
+    "csv-parse": "^4.8.5",
     "d3-fetch": "^1.1.2",
     "geojson2h3": "^1.0.1",
     "h3-js": "^3.6.3",
     "mapbox-gl": "^1.7.0",
+    "papaparse": "^5.1.1",
     "vue": "^2.6.11",
     "vue-mapbox": "^0.4.1"
   },
@@ -25,6 +27,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "raw-loader": "^4.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
